[gd_scene load_steps=6 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://levels/MainMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://CanvasLayer.tscn" type="PackedScene" id=3]
[ext_resource path="res://ScriptProcessor.gd" type="Script" id=5]
[ext_resource path="res://ClientManager.gd" type="Script" id=6]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )
starting_scene = ExtResource( 2 )

[node name="ScriptProcessor" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="ClientManager" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="MusicStream" type="AudioStreamPlayer" parent="."]

[node name="AmbienceStream" type="AudioStreamPlayer" parent="."]

[node name="VoiceStream" type="AudioStreamPlayer" parent="."]

[node name="SFXStream" type="AudioStreamPlayer" parent="."]

[node name="SFXStream2" type="AudioStreamPlayer" parent="."]

[node name="MainScene" type="Node2D" parent="."]

[node name="CanvasLayer" parent="." instance=ExtResource( 3 )]
